[package]
name = "mqtt-protocol"
version = "0.1.0"
authors = ["Håvar Nøvik <havar.novik@gmail.com>"]
edition = "2021"

[features]
framed = ["dep:tokio-util"]

[dependencies.bytes]
version = "1.3.0"

[dependencies.nom]
version = "7.1.2"
default-features = false

[dependencies.tokio-util]
version = "0.7.4"
features = ["codec"]
optional = true
