[package]
name = "mqtt-server"
version = "0.1.0"
authors = ["Håvar Nøvik <havar.novik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.mqtt-protocol]
version = "0.1.0"
path    = "../protocol"

[dependencies.tokio-stream]
version = "0.1.5"

[dependencies.tokio]
version = "1.5.0"
features = ["full"]

[dependencies.tokio-util]
version = "0.6.6"
features = ["codec"]

[dependencies.futures]
version = "0.3.14"
