[package]
name = "mqtt-server"
version = "0.1.0"
authors = ["Håvar Nøvik <havar.novik@gmail.com>"]
edition = "2018"

[[bin]]
name = "mqtt_server_bin"
path = "src/main.rs"

[dependencies.rand]
version = "0.8.4"

[dependencies.itertools]
version = "0.10.1"

[dependencies.dashmap]
version = "4.0.2"

[dependencies.async-trait]
version = "0.1.51"

[dependencies.mqtt-protocol]
version = "0.1.0"
path    = "../protocol"

[dependencies.tokio-stream]
version = "0.1.5"

[dependencies.tokio]
version = "1.5.0"
features = ["full"]

[dependencies.tokio-util]
version = "0.6.6"
features = ["codec"]

[dependencies.futures]
version = "0.3.19"

[dependencies.chrono]
version = "0.4.19"