[package]
name = "mqtt-server"
version = "0.1.0"
authors = ["Håvar Nøvik <havar.novik@gmail.com>"]
edition = "2021"

[[bin]]
name = "mqtt_server_bin"
path = "src/main.rs"

[dependencies.rand]
version = "0.8.4"

[dependencies.itertools]
version = "0.10.1"

[dependencies.dashmap]
version = "5.4.0"

[dependencies.async-trait]
version = "0.1.51"

[dependencies.mqtt-protocol]
version = "0.1.0"
path    = "../protocol"
features = ["framed"]

[dependencies.tokio-stream]
version = "0.1.5"

[dependencies.tokio]
version = "1.5.0"
features = ["full", "tracing"]

[dependencies.tokio-util]
version = "0.7.4"
features = ["codec"]

[dependencies.futures]
version = "0.3.19"

[dependencies.chrono]
version = "0.4.19"

[dependencies.tracing]
version = "0.1.29"

[dependencies.console-subscriber]
version = "0.1.8"